--- a/resources/views/main.edge
+++ b/resources/views/main.edge
@@ -38,29 +38,35 @@
         <p>SHOP BY CATEGORIES</p>
         <div class="sub-cate-all-img">
             <div class="sub-cate-img">
+                <a href="shop">
                 <img src="{{ assetsUrl("images/categories-accessories.jpg") }}">
-                <p>accessories</p>
+                <p>accessories</p></a>
             </div>
             <div class="sub-cate-img">
+                <a href="shop">
                 <img src="{{ assetsUrl("images/categories-case.jpg") }}">
-                <p>case</p>
+                <p>case</p> </a>
             </div>
             <div class="sub-cate-img">
+                <a href="shop">
                 <img src="{{ assetsUrl("images/categories-makeup.jpg") }}">
-                <p>makeup</p>
+                <p>makeup</p></a>
             </div>
             <div class="sub-cate-img">
+                <a href="shop">
                 <img src="{{ assetsUrl("images/categories-toy.jpg") }}">
-                <p>toy</p>
+                <p>toy</p></a>
             </div>
             <div class="sub-cate-img">
+                <a href="shop">
                 <img src="{{ assetsUrl("images/categories-pen.jpg") }}">
-                <p>pen</p>
+                <p>pen</p></a>
             </div>
         </div>
     </div>
     <div class="shop-now">
         <div class="item__frame">
+            <a href="detail">
             <div class="prime__color">
                 <img style="width:300px;" src="{{ assetsUrl("images/toy.png") }}" alt="">
                 <div class="item_frame_text">
@@ -72,10 +78,12 @@
                         <p>฿999.99</p>
                     </div>
                 </div>
+            </a>
             </div>
             <div class="sec__color"></div>
         </div>
         <div class="item__frame">
+            <a href="detail">
             <div class="prime__color">
                 <img style="left:-70%;width:280px;" src="{{ assetsUrl("images/case.png") }}" alt="">
                 <div class="item_frame_text">
@@ -86,11 +94,13 @@
                     <div class="item_frame_text_price">
                         <p>฿55.5</p>
                     </div>
+                </a>
                 </div>
             </div>
             <div class="sec__color"></div>
         </div>
         <div class="item__frame">
+            <a href="detail">
             <div class="prime__color">
                 <img src="{{ assetsUrl("images/hat.png") }}" alt="">
                 <div class="item_frame_text">
@@ -101,6 +111,7 @@
                     <div class="item_frame_text_price">
                         <p>฿111</p>
                     </div>
+                </a>
                 </div>
             </div>
             <div class="sec__color"></div>
