--- a/resources/views/cart.edge
+++ b/resources/views/cart.edge
@@ -36,7 +36,7 @@
         <form class="cart-product-box" action="/delete" method="get">
             {{ csrfField() }}
             <div class="bar-product">
-                <img src="images/product9.jpg" alt="">
+                <img src={{ "images/" + item.path }} alt={{ item.name }}>
                 <div class="product-name">
                     <p style="font-weight: bold;">{{ item.name }}</p>
                     <p style="margin:0;">Color : {{ item.color }}</p>
